force-app/main/default/objects/Flag_Override__c/Flag_Override__c.object-meta.xml
<CustomObject>
    <label>Flag Override</label>
    <nameField>
        <displayFormat>FR{0000}</displayFormat>
        <label>Flag Override</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flag Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>