force-app/main/default/objects/Flag_Override__c/fields/Feature_Flag__c.field-meta.xml
<CustomField>
    <fullName>Feature_Flag__c</fullName>
    <label>Feature Flag</label>
    <referenceTo>Feature_Flag__c</referenceTo>
    <relationshipLabel>Flag Overrides</relationshipLabel>
    <relationshipName>Flag_Overrides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>